# TVY25KMO_harjoitustehtavaia_varten_Eetu_Lamsa

./: README.md
h1/: main.cpp
h2a/: CMakeLists.txt  Car.cpp  Car.h  Rectangle.h  Student.cpp  Student.h  main.cpp
h2b/: CMakeLists.txt  main.cpp
h3a/: CMakeLists.txt  Chef.cpp  ItalianChef.cpp  main.cpp
h3b/: Animal.cpp  Animal.h  Dog.cpp  Dog.h  main.cpp
h4/: CMakeLists.txt  Car.cpp  Car.h  Engine.h  Wheel.cpp  Wheel.h  main.cpp
h5/: CMakeLists.txt  ClassA1.h  ClassA2.h  ClassB.h  main.cpp
h6a/: h6a.pro  main.cpp  myclass.cpp
h6aa/: h6aa.pro
h7/: h7.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
